--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,9 +18,24 @@ body {
   background-color: #eee;
   border-radius: 6px;
   padding: 60px;
+  li{
+    background-color: blue;
+    color:white;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+
+    &:hover{
+      background-color:red;
+    }
+  }
   h1 {
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
+  }
+  #feelsAdd{
+    margin: 25px 0;
   }
 }
